--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Lora:wght@500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Lato&family=Lora:wght@500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Lora:wght@500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lora:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato&family=Lora:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Lora:wght@500&display=swap");
 
 * {
   margin: 0;
@@ -12,14 +12,14 @@
   width: 100%;
   margin: 0 auto;
   box-sizing: border-box;
-  font-family: 'Inter', "Arial", "Helvetica", sans-serif;
+  font-family: "Inter", "Arial", "Helvetica", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
   text-rendering: optimizeLegibility;
-  background: #FFF;
+  background: #fff;
 }
 
 .header {
@@ -33,8 +33,39 @@
   margin: 55px auto 0;
 }
 
+@media screen and (max-width: 768px) {
+  .header__container {
+    width: 211px;
+    margin: 22px auto 4px;
+
+  }
+}
+
 .header__title {
-  text-align: center
+  text-align: center;
+  font-family: "Lora", "Arial", "Helvetica", sans-serif;
+  font-style: medium;
+  font-weight: 500;
+  font-size: 36px;
+  letter-spacing: 0.03cm;
+}
+
+@media screen and (max-width: 768px) {
+  .header__title {
+    font-size: 28px;
+    letter-spacing: 0.02cm;
+  }
+}
+
+.header__logo {
+  margin: 13px auto 0;
+}
+
+@media screen and (max-width: 768px) {
+  .header__logo {
+    width: 206px;
+    margin: 3px auto 0;
+  }
 }
 
 .services {
@@ -43,15 +74,28 @@
   margin: 65px auto 0;
 }
 
+@media screen and (max-width: 768px) {
+  .services {
+    margin: 40px auto 0;
+  }
+}
+
 .card {
   display: grid;
   justify-content: center;
-  grid-template-columns: repeat(3, 330px);
+  grid-template-columns: repeat(auto-fill, minmax(330px, 330px));
   gap: 67px;
 }
 
 .card__container {
   position: relative;
+  box-sizing: border-box;
+}
+
+@media screen and (max-width: 768px) {
+  .card__container:first-child {
+    grid-row: 2 / 3;
+  }
 }
 
 .card__description {
@@ -60,14 +104,21 @@
   flex-direction: column;
   top: 298px;
   left: 30px;
-  background-color: #FFF;
+  background-color: #fff;
   box-shadow: 0px 0px 25px 0px rgba(0, 0, 0, 0.2);
   width: 300px;
   height: 145px;
 }
 
+@media screen and (max-width: 768px) {
+  .card__description {
+    top: 278px;
+    left: 0;
+  }
+}
+
 .card__description_title {
-  font-family: 'Lora', "Arial", "Helvetica", sans-serif;
+  font-family: "Lora", "Arial", "Helvetica", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
@@ -75,20 +126,21 @@
 }
 
 .card__description_text {
-  font-family: 'Lato', "Arial", "Helvetica", sans-serif;
+  font-family: "Lato", "Arial", "Helvetica", sans-serif;
   font-style: normal;
   font-size: 14px;
+  line-height: 22px;
   margin: 5px 0 0 15px;
 }
 
 .card__description_link {
-  font-family: 'Lato', "Arial", "Helvetica", sans-serif;
+  font-family: "Lato", "Arial", "Helvetica", sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 16px;
-  color: #EC5598;
+  color: #ec5598;
   align-self: flex-end;
-  margin: 27px 15px 0 0;
+  margin: 13px 15px 0 0;
   text-decoration: none;
 }
 
@@ -106,12 +158,12 @@
   width: 240px;
   height: 60px;
   display: block;
-  margin: 65px auto 0;
-  color: #EC5598;
-  background-color: #FFF;
+  margin: 102px auto 55px;
+  color: #ec5598;
+  background-color: #fff;
   border: 1px solid;
   border-radius: 3px;
-  font-family: 'Lato', "Arial", "Helvetica", sans-serif;
+  font-family: "Lato", "Arial", "Helvetica", sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 16px;
@@ -123,8 +175,9 @@
   transition: 0.3s;
 }
 
-/* @media screen and (max-width: 768px) {
-  .intro__text {
-    max-width: calc(720 / 768 * 100%);
+@media screen and (max-width: 768px) {
+  .card__button {
+    margin: 60px auto 55px;
+    height: 62px;
   }
-} */
+}
